; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/tkc1800/extr_tkc1800.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/tkc1800/extr_tkc1800.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_NUM_LOCK = common dso_local global i32 0, align 4
@PORTD = common dso_local global i32 0, align 4
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %5 = shl i32 1, %4
  %6 = and i32 %3, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @PORTD, align 4
  %10 = or i32 %9, 4
  store i32 %10, i32* @PORTD, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @PORTD, align 4
  %13 = and i32 %12, -5
  store i32 %13, i32* @PORTD, align 4
  br label %14

14:                                               ; preds = %11, %8
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %17 = shl i32 1, %16
  %18 = and i32 %15, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %14
  %21 = load i32, i32* @PORTD, align 4
  %22 = or i32 %21, 8
  store i32 %22, i32* @PORTD, align 4
  br label %26

23:                                               ; preds = %14
  %24 = load i32, i32* @PORTD, align 4
  %25 = and i32 %24, -9
  store i32 %25, i32* @PORTD, align 4
  br label %26

26:                                               ; preds = %23, %20
  %27 = load i32, i32* %2, align 4
  %28 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %29 = shl i32 1, %28
  %30 = and i32 %27, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %26
  %33 = load i32, i32* @PORTD, align 4
  %34 = or i32 %33, 16
  store i32 %34, i32* @PORTD, align 4
  br label %38

35:                                               ; preds = %26
  %36 = load i32, i32* @PORTD, align 4
  %37 = and i32 %36, -17
  store i32 %37, i32* @PORTD, align 4
  br label %38

38:                                               ; preds = %35, %32
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
